evidence/objects-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"objects","namespace":"bd-g08"},"spec":{"ports":[{"name":"s3","port":8333,"targetPort":"s3"}],"selector":{"app":"objects"},"type":"ClusterIP"}}
  creationTimestamp: "2026-10-03T16:39:56Z"
  name: objects
  namespace: bd-g08
  resourceVersion: "1791045596935055005"
  uid: 98843cec-6183-4ccc-b0ee-72c10b801fd4
spec:
  clusterIP: 34.118.234.120
  clusterIPs:
  - 34.118.234.120
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: s3
    port: 8333
    protocol: TCP
    targetPort: s3
  selector:
    app: objects
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
